test/sema/gc/self_pointer_type.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
trait A {
  // CHECK: [[# @LINE + 1 ]]:10: error: 'self' can only have '&Self' or '&mut Self' types
  fn foo(self: **Self) {}

  // CHECK: [[# @LINE + 1 ]]:10: error: 'self' can only have '&Self' or '&mut Self' types
  fn bar(self: **mut Self) {}
}

fn main() {}
